<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jackmanu.scplusplus.CompositionSetUp">

    <!-- 1. Toolbar at the top -->
    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/picture_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/MainButtonStyle"
            android:id="@+id/timeSignature"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state"
            android:onClick="selectFrag"
            android:text="@string/timesignatures" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/MainButtonStyle"
            android:id="@+id/rhythmicPattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state"
            android:textAllCaps="false"
            android:onClick="selectFrag"
            android:text="@string/rhythmicpatterns" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/MainButtonStyle"
            android:id="@+id/stickingPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_state"
            android:textAllCaps="false"
            android:onClick="selectFrag"
            android:text="@string/stickingpreferences"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/MainButtonStyle"
            android:id="@+id/generateAndPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="generateAndPlay"
            android:text="@string/generateandplay"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorAccent"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/endLine1"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <FrameLayout
            android:name="com.example.doug.stickcontrolrandomizer.EmptyFragment"
            android:id="@+id/compFragment"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/empty" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

