<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mixingBoardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:visibility="gone"
    android:weightSum="2">
    <RelativeLayout
        android:id="@+id/metronomeVolumeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
      <TextView
          android:id="@+id/metronomeVolumeHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/metronome"
          android:textColor="@color/black"
          android:layout_alignParentTop="true"
          android:textSize="30sp"
          android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/downbeatLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/metronomeVolumeHeader"
        android:weightSum="2">
        <com.jackmanu.scplusplus.VerticalSeekBar
            android:id="@+id/downbeatSeek"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:max="100"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/downbeatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:text="@string/downbeat"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/quarterLayout"
        android:layout_toRightOf="@id/downbeatLayout"
        android:layout_below="@id/metronomeVolumeHeader"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="2">
        <com.jackmanu.scplusplus.VerticalSeekBar
            android:id="@+id/quarterSeek"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:max="100"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/quarterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/quarter"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/eighthLayout"
        android:layout_toRightOf="@id/quarterLayout"
        android:layout_below="@id/metronomeVolumeHeader"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="2">
        <com.jackmanu.scplusplus.VerticalSeekBar
            android:id="@+id/eighthSeek"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:max="100"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/eighthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/eighth"/>
    </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/metronomeVolumeLayout"
        android:background="@color/black"/>
    <RelativeLayout
        android:id="@+id/drumVolumeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <TextView
        android:id="@+id/drumVolumeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drum"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/accentLayout"
        android:layout_below="@id/drumVolumeHeader"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">
        <com.jackmanu.scplusplus.VerticalSeekBar
            android:id="@+id/accentSeek"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:max="100"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/accentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/accent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/unaccentLayout"
        android:layout_toRightOf="@id/accentLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/drumVolumeHeader"
        android:weightSum="2">
        <com.jackmanu.scplusplus.VerticalSeekBar
            android:id="@+id/unaccentSeek"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:max="100"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/unaccentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/unaccent"/>
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>